--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "frontend-exercise",
+  "homepage": "https://github.com/Prakash-Reddy-Potlapadu/GEVME-Assignment",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^3.2.3",
     "lodash-es": "^4.17.21",
     "node-sass": "^7.0.1",
     "prettier": "^2.6.2",
@@ -20,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+"deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
