fixing home page url issues

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend-exercise",
-  "homepage": "https://github.com/Prakash-Reddy-Potlapadu/GEVME-Assignment",
+  "homepage": "https://github.com/GEVME-Assignment",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
