fixing homepage issue in github

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend-exercise",
-  "homepage": "https://github.com/GEVME-Assignment",
+  "homepage": "https://prakash-reddy-potlapadu.github.io/GEVME-Assignment/",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
